--- a/ThesisReport/BinocularVision.tex
+++ b/ThesisReport/BinocularVision.tex
@@ -117,7 +117,8 @@ shows that the average stereoacuity for different age groups is as follows:
 \end{center}
 \end{minipage} \newline \newline
 
- 
+As can be seen, the stereoacuity for the human visual system increases with aging, that is the amount of errors in the depth results 
+is less perceptible in the visual system of the older people than the young ones.
 Using these values in equation \ref{eq:stac} with the average interpupillary distance in humans which is measured to be equal to 64mm \cite{how95}, 
 we can estimate the threshold for minimum detectable disparity
 between two objects based on their distance from the observer. \newline 
