--- a/ThesisReport/Evaluation.tex
+++ b/ThesisReport/Evaluation.tex
@@ -388,7 +388,7 @@ Algorithm & Age & Average Outlier(vG) & Average Outlier(vD) \\ \hline
 \hline
 \multicolumn{4}{ |c| }{Average outliers} \\
 \hline
-Algorithm & Age & Average Outlier \\ \hline
+Algorithm & Age & Average Outlier(vG) & Average Outlier(vD)  \\ \hline
 \multirow{4}{*}{SGBM} & 17-29 & 0.11 & 0.14 \\
 & 30-49 & 0.10 & 0.12 \\
 & 50-69 & 0.08 & 0.09 \\
@@ -526,7 +526,7 @@ Full & 5.29 \\ \hline
 \hline
 \multicolumn{4}{ |c| }{Average outliers} \\
 \hline
-Region & Age & Average Outlier \\ \hline
+Region & Age &  Average Outlier(vG) & Average Outlier(vD)  \\ \hline
 \multirow{4}{*}{Masked} & 17-29 & 0.23 & 0.33 \\
 & 30-49 & 0.22 & 0.31 \\
 & 50-69 & 0.18 & 0.27 \\
